try3 fix instant padding on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -10,12 +10,7 @@
 html {
   font-size: 10px;
   font-family: 'Roboto', sans-serif;
-}
-
-body {
   overflow-x: hidden;
-  display: block;
-  width: 100%;
 }
 
 :root {
